force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <label>Company ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RGBID</fullName>
            </value>
            <value>
                <fullName>RGDCA</fullName>
            </value>
            <value>
                <fullName>RGDUS</fullName>
            </value>
            <value>
                <fullName>RGGAU</fullName>
            </value>
            <value>
                <fullName>RGGHK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>