force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Completed_Payout_Count__c.field-meta.xml
<CustomField>
    <fullName>Completed_Payout_Count__c</fullName>
    <label>Completed Payouts Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>