force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Sales Documents</relationshipLabel>
    <relationshipName>Sales_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>