force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Create_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Create_Transaction__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create Transaction</label>
    <type>Checkbox</type>
</CustomField>