force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Credit_control_notes__c.field-meta.xml
<CustomField>
    <fullName>Credit_control_notes__c</fullName>
    <label>Credit Control Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>