force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/CSM_Chase_Status__c.field-meta.xml
<CustomField>
    <fullName>CSM_Chase_Status__c</fullName>
    <label>CSM Chase Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7-day overdue email sent</fullName>
            </value>
            <value>
                <fullName>14-day overdue email sent</fullName>
            </value>
            <value>
                <fullName>Account revoked &amp; escalated</fullName>
            </value>
            <value>
                <fullName>CSM not to chase, with finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>