force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/CSM_Required__c.field-meta.xml
<CustomField>
    <fullName>CSM_Required__c</fullName>
    <label>CSM Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>