force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Sales Documents</relationshipLabel>
    <relationshipName>Sales_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>