force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <label>Forecast</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Will pay</fullName>
            </value>
            <value>
                <fullName>Won&apos;t pay</fullName>
            </value>
            <value>
                <fullName>Might pay</fullName>
            </value>
            <value>
                <fullName>Paid commission invoice</fullName>
            </value>
            <value>
                <fullName>Paid by Stripe</fullName>
            </value>
            <value>
                <fullName>Event Cancelling</fullName>
                <label>Event cancelling</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>