force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/In_Xero__c.field-meta.xml
<CustomField>
    <fullName>In_Xero__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Xero</label>
    <type>Checkbox</type>
</CustomField>