force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Invoice_ID18__c.field-meta.xml
<CustomField>
    <fullName>Invoice_ID18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice_ID18</label>
    <type>Text</type>
</CustomField>