force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Invoice_Information__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Information__c</fullName>
    <label>Invoice Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>