force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Invoice_Opportunity_ID18__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Opportunity_ID18__c</fullName>
    <formula>CASESAFEID( bt_stripe__Opportunity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice_Opportunity_ID18</label>
    <type>Text</type>
</CustomField>