force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Paylink__c.field-meta.xml
<CustomField>
    <fullName>Paylink__c</fullName>
    <description>Paylink from related Transaction Record</description>
    <label>Paylink</label>
    <type>Url</type>
</CustomField>