force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Payment_Date_Not_Known__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date_Not_Known__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Date Not Known</label>
    <type>Checkbox</type>
</CustomField>