force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Post_to_Xero__c.field-meta.xml
<CustomField>
    <fullName>Post_to_Xero__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post to Xero</label>
    <type>Checkbox</type>
</CustomField>