force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Prepared_For_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Prepared_For_First_Name__c</fullName>
    <formula>bt_stripe__Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prepared For First Name</label>
    <type>Text</type>
</CustomField>