force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Primary_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Primary Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices (Primary Billing Contact)</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>