force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Sales Documents</relationshipLabel>
    <relationshipName>Sales_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>