force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Quote_s_Primary_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Quote_s_Primary_Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote&apos;s Primary Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices (Quote&apos;s Primary Billing Contact)</relationshipLabel>
    <relationshipName>Invoices2</relationshipName>
    <type>Lookup</type>
</CustomField>