force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/QuoteName__c.field-meta.xml
<CustomField>
    <fullName>QuoteName__c</fullName>
    <formula>Quote__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuoteName</label>
    <type>Text</type>
</CustomField>