force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Retained_Transfer_Count__c.field-meta.xml
<CustomField>
    <fullName>Retained_Transfer_Count__c</fullName>
    <label>Retained Transfer Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>