force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Send_Emails_for_Quote__c.field-meta.xml
<CustomField>
    <fullName>Send_Emails_for_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Emails for Quote</label>
    <type>Checkbox</type>
</CustomField>