force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Send_Invoice_Emails_s__c.field-meta.xml
<CustomField>
    <fullName>Send_Invoice_Emails_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Invoice Emails</label>
    <type>Checkbox</type>
</CustomField>