force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Send_Invoice_To__c.field-meta.xml
<CustomField>
    <fullName>Send_Invoice_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Send Invoice To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices (Send Invoice To)</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>