force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Send_Invoice_to_Additional_Contact__c.field-meta.xml
<CustomField>
    <fullName>Send_Invoice_to_Additional_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Invoice to Additional Contact</label>
    <type>Checkbox</type>
</CustomField>