force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Send_Invoice_To_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Send_Invoice_To_First_Name__c</fullName>
    <formula>Send_Invoice_To__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Invoice To First Name</label>
    <type>Text</type>
</CustomField>