force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/Send_Reminders__c.field-meta.xml
<CustomField>
    <fullName>Send_Reminders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Reminders</label>
    <type>Checkbox</type>
</CustomField>