force-app/main/default/objects/bt_stripe__Sales_Document__c/fields/SendEmailAlert__c.field-meta.xml
<CustomField>
    <fullName>SendEmailAlert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendEmailAlert</label>
    <type>Checkbox</type>
</CustomField>