force-app/main/default/objects/bt_stripe__Sales_Document__c/recordTypes/bt_stripe__Invoice.recordType-meta.xml
<RecordType>
    <fullName>bt_stripe__Invoice</fullName>
    <active>true</active>
    <description>Create Blackthorn Invoice - generated by checkouts.</description>
    <label>Invoice</label>
</RecordType>