force-app/main/default/objects/bt_stripe__Sales_Document__c/listViews/bt_stripe__All.listView-meta.xml
<ListView>
    <fullName>bt_stripe__All</fullName>
    <columns>NAME</columns>
    <columns>bt_stripe__Bill_To__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>bt_stripe__Contact__c</columns>
    <columns>bt_stripe__Subject__c</columns>
    <columns>bt_stripe__Status__c</columns>
    <columns>bt_stripe__Issue_Date__c</columns>
    <columns>bt_stripe__Expiration_Date__c</columns>
    <columns>bt_stripe__Total_Amount__c</columns>
    <columns>bt_stripe__Balance_Due_Amount__c</columns>
    <columns>bt_stripe__Balance_Paid_Amount__c</columns>
    <columns>Post_to_Xero__c</columns>
    <columns>In_Xero__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Account_Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>bt_stripe__Payment_Status__c</field>
        <operation>equals</operation>
        <value>Unpaid,Past Due,Partially Paid,Refunded,Partially Refunded,Overpaid</value>
    </filters>
    <filters>
        <field>bt_stripe__Status__c</field>
        <operation>equals</operation>
        <value>Accepted,Rejected,Voided,Ready To Bill,Uncollectible</value>
    </filters>
    <label>All</label>
</ListView>