force-app/main/default/objects/bt_stripe__Sales_Document__c/listViews/bt_stripe__All_Invoices.listView-meta.xml
<ListView>
    <fullName>bt_stripe__All_Invoices</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>bt_stripe__Bill_To__c</columns>
    <columns>bt_stripe__Contact__c</columns>
    <columns>bt_stripe__Status__c</columns>
    <columns>bt_stripe__Due_Date__c</columns>
    <columns>bt_stripe__Net_Amount__c</columns>
    <columns>bt_stripe__Discount_Amount__c</columns>
    <columns>bt_stripe__Subtotal_Amount__c</columns>
    <columns>bt_stripe__Tax_Rate__c</columns>
    <columns>bt_stripe__Tax_Amount__c</columns>
    <columns>bt_stripe__Total_Amount__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>bt_stripe__Sales_Document__c.bt_stripe__Invoice</value>
    </filters>
    <label>All Invoices</label>
</ListView>